package tdt4145.core;

/**
 * User class that stores the userID, name, email, and instructor_privileges
 */

public class User {

    private final int userID;
    private final String name;
    private final String email;
    private final boolean instructor_priviliges;

    public User(int userID, String name, String email, boolean instructor_priviligies) {
        this.userID = userID;
        this.name = name;
        this.email = email;
        this.instructor_priviliges= instructor_priviligies;
    }

    public int getUserID() {
        return userID;
    }

    public String getName() {
        return name;
    }

    public String getEmail() {
        return email;
    }

    public boolean isInstructor_priviliges() {
        return instructor_priviliges;
    }
}
