@startuml

title __CORE's Class Diagram__\n

  namespace tdt4145.core {
    class tdt4145.core.ActiveCourse {
        - allow_anoymous : boolean
        - courseID : int
        - term : String
        - year : int
        + ActiveCourse()
        + getCourseID()
        + getTerm()
        + getYear()
        + isAllow_anoymous()
    }
  }
  

  namespace tdt4145.core {
    class tdt4145.core.Cleanup {
        {static} ~ closePreparedStatement()
        {static} ~ closeResultSet()
        {static} ~ closeStatement()
        {static} ~ enableAutoCommit()
        {static} ~ performRollback()
        {static} ~ performRollback()
    }
  }
  

  namespace tdt4145.core {
    class tdt4145.core.Course {
        + courseID : int
        + name : String
        + Course()
        + getCourseID()
        + getName()
    }
  }
  

  namespace tdt4145.core {
    class tdt4145.core.CourseDAO {
        - connection : Connection
        + CourseDAO()
        + createActiveCourse()
        + getAnonymousCourse()
        + getCourses()
    }
  }
  

  namespace tdt4145.core {
    abstract class tdt4145.core.DBConn {
        # connection : Connection
        + DBConn()
        + connect()
    }
  }
  

  namespace tdt4145.core {
    class tdt4145.core.Database {
        {static} - DATABASE_DRIVER : String
        {static} - DATABASE_PASSWORD : String
        {static} - DATABASE_URL : String
        {static} - DATABASE_USERNAME : String
        {static} - comboPooledDataSource : ComboPooledDataSource
        {static} - database : Database
        + getConnection()
        {static} + getInstance()
        {static} + setNewDatabase()
        {static} + setNewDatabase()
        - Database()
    }
  }
  

  namespace tdt4145.core {
    class tdt4145.core.FolderDAO {
        - connection : Connection
        + FolderDAO()
        + createFolder()
        + createRootFolder()
        + createSubFolder()
        + getFolderID()
        + getTopFolder()
    }
  }
  

  namespace tdt4145.core {
    class tdt4145.core.Password {
        {static} - ITERATIONS : int
        {static} - KEY_LENGTH : int
        {static} - SALT_LENGTH : int
        {static} + getSalt()
        {static} + hash()
        {static} + verify()
    }
  }
  

  namespace tdt4145.core {
    class tdt4145.core.Tag {
        - label : String
        - tagID : int
        + Tag()
        + getLabel()
        + getTagID()
    }
  }
  

  namespace tdt4145.core {
    class tdt4145.core.TemplateDAO {
        - connection : Connection
        + TemplateDAO()
        + close()
        ~ getConnection()
    }
  }
  

  namespace tdt4145.core {
    class tdt4145.core.ThreadDAO {
        - connection : Connection
        + CreateComment()
        + CreatePost()
        + CreateThread()
        + ThreadDAO()
        + check_anonymous()
        + getTagID()
        + getTags()
        + getTopThread()
        + linkPostTags()
        + searchByKeyword()
    }
  }
  

  namespace tdt4145.core {
    class tdt4145.core.User {
        - email : String
        - instructor_priviliges : boolean
        - name : String
        - userID : int
        + User()
        + getEmail()
        + getName()
        + getUserID()
        + isInstructor_priviliges()
    }
  }
  

  namespace tdt4145.core {
    class tdt4145.core.UserDAO {
        - connection : Connection
        + UserDAO()
        + addUser()
        + getInstructor()
        + isPasswordCorrect()
        + likethread()
        + logIn()
        + logOut()
        + overviewStatistics()
        + setPassword()
        + viewedPost()
    }
  }
  

  namespace tdt4145.core {
    class tdt4145.core.UserOverview {
        - name : String
        - nbpost : int
        - nbreadposts : int
        + UserOverview()
        + getName()
        + getNbpost()
        + getNbreadposts()
        + toString()
    }
  }
  

  tdt4145.core.CourseDAO -up-|> tdt4145.core.TemplateDAO
  tdt4145.core.FolderDAO -up-|> tdt4145.core.TemplateDAO
  tdt4145.core.TemplateDAO .up.|> java.lang.AutoCloseable
  tdt4145.core.ThreadDAO -up-|> tdt4145.core.TemplateDAO
  tdt4145.core.UserDAO -up-|> tdt4145.core.TemplateDAO


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
